--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <section class="about-text">
           <p>
-            Soy junior web developer de argentina, actualmente trabajando en proyectos personales(como este mismo).
+            Soy un estudiante 50% autodidacta de argentina, actualmente trabajando en proyectos personales(como este mismo).
             Algo que me gusta es probar las nuevas tecnologias e integrarlas lo mejor posible con mis otros conocimientos (en lo personal paso mas tiempo viendo cosas de diseño).
           </p>
 
@@ -220,7 +220,7 @@
                 <h4 class="h4 service-item-title">Diseño web</h4>
 
                 <p class="service-item-text">
-                  Me interesa el mundo del diseño web, aun no profundizo demasido en este aspecto.
+                  Me interesa el mundo del diseño web, pero aun no me destaco en este aspecto.
                 </p>
               </div>
 
