--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/alan-damian/myportfolio.github.io">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -726,7 +726,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://github.com/alan-damian/proyecto_blog_python">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
